--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ OVEX_SECRET=123212
 OVEX_API_KEY=12ejnfriu23hurdhq2iudhwiwiu
 JWT_SECRET=23JKRFB3UWICDH2N3UEND3UWIJK2
 BRIDGE_LIVE_API_KEY=sk-live-cd29e0b067cb87f608de71858920f0c7
+SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/NEW/WEBHOOK_URL
+SLACK_PRIVATE_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/PRIVATE/WEBHOOK_URL
